--- a/resources/lang/en_US.yml
+++ b/resources/lang/en_US.yml
@@ -29,4 +29,25 @@ died-message: "&4> %0 died."
 leave-item: "&r&cLeave from game"
 
 nametag: "&c&lT&4N&cT TAGGED\n%0"
+
+scoreboards:
+  title: "§l§eTntTag"
+  # {name} - Returns arena's name
+  # {players} - Returns all alive players' count
+  # {required_players} - Returns minimumPlayers minus(-) allPlayers
+  # {min_players} - Returns minimum player amount
+  # {max_players} - Returns maximum player amount
+  # {countdown} - Returns countdown
+  # {tagged} - Returns tagged person's name or 'none'
+  waiting:
+    - "§eWaiting for {required_players} players..."
+    - "§aPlayers: {players}/{max_players}"
+  starting:
+    - "§eGame is starting in {countdown}"
+    - "§aPlayers: {players}/{max_players}"
+  running:
+    - "§aAlive players: {players}"
+    - "§bTagged player: {tagged}"
+  closed:
+    - "§cArena is currently closed!"
 ...
