--- a/resources/lang/tr_TR.yml
+++ b/resources/lang/tr_TR.yml
@@ -29,4 +29,26 @@ died-message: "&4> %0 öldü."
 leave-item: "&r&cOyundan ayrıl"
 
 nametag: "&c&lT&4N&cT TAGLANDI\n%0"
+
+scoreboards:
+  title: "§l§eTntTag"
+  # {name} - Arenanın adını döner
+  # {players} - Yaşayan oyuncuların sayısını döner
+  # {required_players} - Minimum oyuncu sayısı - oyuncu sayısını döner
+  # {min_players} - Minimum oyuncu sayısını döner
+  # {max_players} - Maximum oyuncu sayısını döner
+  # {countdown} - Sayacı döner
+  # {tagged} - Taglı kişiyi veya 'none' döner
+  waiting:
+    - "§e{required_players} oyuncu bekleniyor..."
+    - "§aOyuncular: {players}/{max_players}"
+  starting:
+    - "§eOyun {countdown} saniye"
+    - "§eiçinde başlayacak"
+    - "§aOyuncular: {players}/{max_players}"
+  running:
+    - "§aYaşayan oyuncular: {players}"
+    - "§bTaglı oyuncu: {tagged}"
+  closed:
+    - "§cArena kapandı!"
 ...
