fixed languages. Requested by JoshuaPH

--- a/resources/lang/en_US.yml
+++ b/resources/lang/en_US.yml
@@ -34,20 +34,23 @@ scoreboards:
   title: "§l§eTntTag"
   # {name} - Returns arena's name
   # {players} - Returns all alive players' count
+  # {seekers} - Returns seekers' count
+  # {hunters} - Returns hunters' count
   # {required_players} - Returns minimumPlayers minus(-) allPlayers
   # {min_players} - Returns minimum player amount
   # {max_players} - Returns maximum player amount
   # {countdown} - Returns countdown
-  # {tagged} - Returns tagged person's name or 'none'
+  # {endsafter} - Returns when game ends after(seconds)
   waiting:
-    - "§eWaiting for {required_players} players..."
+    - "§eWaiting {required_players} players..."
     - "§aPlayers: {players}/{max_players}"
   starting:
-    - "§eGame is starting in {countdown}"
+    - "§eGame ends after {countdown}"
     - "§aPlayers: {players}/{max_players}"
   running:
-    - "§aAlive players: {players}"
-    - "§bTagged player: {tagged}"
+    - "§aAlive hunters: {hunters}"
+    - "§aAlive seekers: {seekers}"
+    - "§bSeekers will win after {endsafter}!"
   closed:
     - "§cArena is currently closed!"
 ...
