--- a/resources/lang/tr_TR.yml
+++ b/resources/lang/tr_TR.yml
@@ -34,11 +34,13 @@ scoreboards:
   title: "§l§eTntTag"
   # {name} - Arenanın adını döner
   # {players} - Yaşayan oyuncuların sayısını döner
+  # {seekers} - Saklanan oyuncuların sayısını döner
+  # {hunters} - Avcı oyuncuların sayısını döner
   # {required_players} - Minimum oyuncu sayısı - oyuncu sayısını döner
   # {min_players} - Minimum oyuncu sayısını döner
   # {max_players} - Maximum oyuncu sayısını döner
   # {countdown} - Sayacı döner
-  # {tagged} - Taglı kişiyi veya 'none' döner
+  # {endsafter} - Oyunun kaç saniye sonra biteceğini döner
   waiting:
     - "§e{required_players} oyuncu bekleniyor..."
     - "§aOyuncular: {players}/{max_players}"
@@ -47,8 +49,10 @@ scoreboards:
     - "§eiçinde başlayacak"
     - "§aOyuncular: {players}/{max_players}"
   running:
-    - "§aYaşayan oyuncular: {players}"
-    - "§bTaglı oyuncu: {tagged}"
+    - "§aYaşayan avcılar: {hunters}"
+    - "§aYaşayan saklananlar: {seekers}"
+    - "§bSaklananlar {endsafter} saniye"
+    - "§bsonra kazanacak!"
   closed:
     - "§cArena kapandı!"
 ...
