--- a/resources/lang/tr_TR.yml
+++ b/resources/lang/tr_TR.yml
@@ -34,13 +34,11 @@ scoreboards:
   title: "§l§eTntTag"
   # {name} - Arenanın adını döner
   # {players} - Yaşayan oyuncuların sayısını döner
-  # {seekers} - Saklanan oyuncuların sayısını döner
-  # {hunters} - Avcı oyuncuların sayısını döner
   # {required_players} - Minimum oyuncu sayısı - oyuncu sayısını döner
   # {min_players} - Minimum oyuncu sayısını döner
   # {max_players} - Maximum oyuncu sayısını döner
   # {countdown} - Sayacı döner
-  # {endsafter} - Oyunun kaç saniye sonra biteceğini döner
+  # {tagged} - Taglı kişiyi veya 'none' döner
   waiting:
     - "§e{required_players} oyuncu bekleniyor..."
     - "§aOyuncular: {players}/{max_players}"
@@ -49,10 +47,8 @@ scoreboards:
     - "§eiçinde başlayacak"
     - "§aOyuncular: {players}/{max_players}"
   running:
-    - "§aYaşayan avcılar: {hunters}"
-    - "§aYaşayan saklananlar: {seekers}"
-    - "§bSaklananlar {endsafter} saniye"
-    - "§bsonra kazanacak!"
+    - "§aYaşayan oyuncular: {players}"
+    - "§bTaglı oyuncu: {tagged}"
   closed:
     - "§cArena kapandı!"
 ...
